assets/styles.css
/* Contrology Studio color palete and font family*/
@font-face { 
    font-family: 'Glacial-Indifference'; 
    src: url('GlacialIndifference-Regular.otf'); 
    font-weight: normal;
    font-style: normal;
} 

@font-face { 
    font-family: 'Glacial-Indifference'; 
    src: url('glacial-indifference.bold.otf'); 
    font-weight: bold;
    font-style: normal;
} 

@font-face { 
    font-family: 'Kingred-Modern'; 
    src: url('kingred.otf'); 
} 

:root {
    --primary-bgcolor: #F6EFEB;
    --secondary-bgcolor: #EED7C1;
    --light-bgcolor: #F7F6F6;
    --dark-color: #2D3640;
    --dark-color2: #474132;
    --dark-color3: #262728;
    --dark-color4: #2b2723;
    --system-font: "Glacial-Indifference", sans-serif;
    --title-font: "Sorts Mill Goudy", serif;
    --emphasis-font: "Kingred-Modern", cursive;
    --max-width: 1200px;
}

body {
    font-family: var(--system-font);
    /* background-color: white; */
    font-weight: 100;
    font-size: 1.5rem;
    color: var(--dark-color);
    line-height: 1.5;
    /* max-width: var(--max-width); */
    /* margin: auto; */
}

*, *::before, *::after {
    box-sizing: border-box;
}

h1, h2, h3, h4 {
    font-family: var(--title-font);
    font-weight: 100;    
}

h2 {
    font-size: 3rem;
}

button, .btn {
    color: var(--dark-color);
    border: 1px solid var(--dark-color3);
    border-radius: 10px;
    text-align: center;
    padding-top: 8px;
    padding-bottom: 8px;
}

button:hover, .btn:hover {
    opacity: 0.7;
}

a {
    text-decoration: none;
    color: inherit;
}

.invisible {
    visibility: hidden;
}

#header {
    background-image: url(../images/bg.png);
    background-size: cover;
    background-position: 0 18%;
    position: relative;
}

#logo-sect {
    display: flex;
    justify-content: center;
}

#logo {
    display: block;
    margin: auto; 
    height: 120px;
    object-fit: contain;
    max-width:75%;
}

#menu-control {
    display: none;
}

nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    height: 120px;
}

nav a {
    color: white;
    padding: 5px;
    line-height: 1;
}

nav .dropdown a:hover {
    text-decoration: underline;
}

.dropdown-item {
    display: none;
}

.dropdown-item a {
    display: block; /* so each item shown on a separate line */
}

.dropdown:hover .dropdown-item {
    display: block;
    position: absolute;
}

#menu-sect {
    pointer-events: all;
}

#page-header {
    height: 200px;
}

#page-header h1 {
    max-width: var(--max-width);
    margin: auto;
    padding: 5% 0 0 5%;
    font-family: var(--emphasis-font);
    color: var(--light-bgcolor);
    font-size: 4rem;
    font-weight: 100;
}

.flex-row {
    display: flex;
    justify-content: space-around;
}

.content {
    max-width: var(--max-width);
    margin: auto;
}

#topBtn {
    display: none; /* Hidden by default */
    position: fixed; /* Fixed/sticky position */
    bottom: 20px; /* Place the button at the bottom of the page */
    right: 30px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    background-color: var(--dark-color); /* Set a background color */
    color: white; /* Text color */
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 1rem; /* Some padding */
    font-size: 2rem; /* Increase font size */
    width: 4rem;
    height: 4rem;
    opacity: 0.2;
}

#topBtn:hover {
    opacity: 0.7;
}

footer {
    background-color: var(--dark-color);
}
.copyright-area {
    max-width: var(--max-width);
    margin: auto;
    padding: 15px 30px;
    font-size: 1rem;
    font-family: var(--system-font);
    color: white;
}

.copyright-area a {
    text-decoration: underline;
}

.hide {
    display: none;
}

@media only screen and (max-width: 481px) {

    body {
        font-size: 0.8rem;
    }

    h2 {
        font-size: 1.75rem;
    }

    #logo-sect {
        justify-content: space-between;
        align-items: center;
    }

    #logo {
        margin-left: 3%;
    }

    #menu-control {
        display: block;
        margin-right: 5%;
        font-size: 1.5rem;
        pointer-events: all;
        color: white;
    }

    #menu-sect, .dropdown-item {
        display: none;
    }

    nav {
        display: block;
    }

    nav a {
        text-decoration: underline;
    }

    .dropdown {
        line-height: 1;
        font-size: 1.25rem;
        padding: 0 5%;
    }

    .dropdown-items {
        display: none;
    }
    
    #menu-sect.show {
        display: block;
        position: absolute;
        top: 100px;
    }

    #topBtn {
        bottom: 3vw;
        right: 3vw;
        padding: 3vw;
        font-size: 5vw;
        width: 10vw;
        height: 10vw;
    }

    #page-header {
        height: 150px;
    }

    #page-header h1 {
        padding: 4rem 0 0 0;
        font-size: 2.625rem;
        text-align: center;
    }

    .copyright-area {
        font-size: 0.9rem;
        text-align: center;
    }
}

